--- a/styles.css
+++ b/styles.css
@@ -41,15 +41,45 @@ h1, p {
 
 .profile-img-div {
     margin-left: 60px;
+    margin-bottom: 50px;
     width: 30%;
     height: 70%;
-    background-color: aquamarine;
     margin-right: 50px; 
 }
 
+.profile-img{
+    width: 110%;
+    height: auto;
+}
+
 .profile-content-div {
+    border-left: 1px solid gray;
     margin-right: 60px;
     width: 50%;
-    height: 70%;
-    background-color: bisque;
+    height: 85%;
+    padding-left: 20px;
+}
+
+.profile-name{
+    margin-top: 10px;
+    text-align: left;
+}
+
+.profile-ename{
+    text-align: left;
+    margin-top: -10px;
+    margin-left: 10px;
+    margin-bottom: 50px;
+}
+
+.profile-phone,
+.profile-email,
+.profile-address{
+    margin-left: 10px;
+    margin-top: -15px;
+
+}
+
+.small-font{
+    font-size: 0.8rem;
 }
