--- a/styles.css
+++ b/styles.css
@@ -1,85 +1,90 @@
+/* styles.css */
+
 body {
     margin: 0;
     padding: 0;
-    background: rgb(100, 153, 233); /* Initial solid color background */
     overflow-x: hidden;
 }
 
 .container {
     width: 100%;
-    height: 200vh; 
+    height: 600vh;
     position: relative;
 }
 
 .content-section {
-    width: 50%;
-    height: 60vh;
-    background-color: white;
+    width: 100%;
+    height: 100vh;
     position: absolute;
-    top: 8%;
-    left: 25%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-h1, p {
+#section1 {
+    top: 0;
+    height: 100vh;
+}
+
+#section2 {
+    top: 100vh;
+}
+
+#section3 {
+    top: 200vh;
+}
+
+#section4 {
+    top: 300vh;
+}
+
+#section5 {
+    top: 400vh;
+}
+
+h1,
+p {
     margin: 0;
     padding: 10px;
     text-align: center;
 }
 
+/* section1 */
+.section1-title {
+    color: #6078BA;
+    font-weight: bold;
+    font-size: 2rem;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
 /* Profile CSS */
 .profile-container {
-    display: flex; 
+    margin-top: -7vh;
+    display: flex;
     width: 100%;
-    justify-content: center; 
+    height: 80vh;
+    justify-content: center;
     align-items: center;
 }
 
-.profile-img-div {
-    margin-left: 60px;
-    margin-bottom: 50px;
-    width: 30%;
-    height: 70%;
-    margin-right: 50px; 
-}
-
-.profile-img{
-    width: 110%;
+.computer {
+    width: 60%;
     height: auto;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
-.profile-content-div {
-    border-left: 1px solid gray;
-    margin-right: 60px;
-    width: 50%;
-    height: 85%;
-    padding-left: 20px;
+.profile-detail {
+    /* background-color: aqua; */
+    margin-top: 80px;
+    width: 20%;
+    height: 30vh;
+    position: absolute;
 }
 
-.profile-name{
-    margin-top: 10px;
+#profileDetail1,
+#profileDetail2,
+#profileDetail3 {
     text-align: left;
-}
-
-.profile-ename{
-    text-align: left;
-    margin-top: -10px;
-    margin-left: 10px;
-    margin-bottom: 50px;
-}
-
-.profile-phone,
-.profile-email,
-.profile-address{
-    margin-left: 10px;
-    margin-top: -15px;
-
-}
-
-.small-font{
-    font-size: 0.8rem;
+    padding-left: 35px;
 }
